# UTOPIA

./: LICENSE.txt  README.MD  pyproject.toml  requirements.txt
UTOPIA/: cli.py
UTOPIA/calibration/: generate_folds.py  model_ct.py  model_gene.py  predict_ct.py  predict_gene.py  utils.py
UTOPIA/img_process/: feature_extraction_uni.py  get_tissue_mask.py  histology_clustering.py  plot.py  reduce_dimensions.py  scaling_he_image.py  scaling_image_features.py  utils.py
UTOPIA/img_process/HistoSweep/: additionalPlots.py  clustering-histosweep.ipynb  computeMetrics.py  generateMask.py  plot.py  textureAnalysis.py
UTOPIA/inference/: confidence.py  conformal.py  fdr.py  plot.py  read_data.py  run.py
UTOPIA/utils/: clustering.py  crop_roi.py  io.py  set_seeds.py  sliding_window.py
demo/: DOWNLOAD_DATA  targets_to_infer.json  utopia_config
