[build-system]
requires      = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name            = "utopia"
version         = "0.1.0"
authors         = [{ name = "Kaitian Jin", email = "kaitian.jin@pennmedicine.upenn.edu" }]
requires-python = ">=3.8"

[project.scripts]
utopia = "UTOPIA.cli:main"

[tool.setuptools.packages.find]
include = ["UTOPIA*"]
